--- a/Screensaver.html
+++ b/Screensaver.html
@@ -16,11 +16,13 @@
     <h3><a href="index.html">Home</a> |<a href="Calculator.html"> Calculator</a> | <a href="Cars.html">Cars</a> | <a href="Screensaver.html">Zoog</a> | <a href="Etch.html">Etch-A-Sketch</a> |</h3>
   </div>
   <div class="content">
-  <p> ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~</p>
+  <p> ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~</p>
   <p>
     <canvas id="zoog" data-processing-sources="zoog/Zoog_.pde" width="280" height="370"></canvas>
   </p>
   <p>&nbsp;</p>
+  <p>Download:</p>
+  <p><a href="zoog/Zoog_.pde"><img src="Images/download_image.png" width="59" height="57" alt=""/></a></p>
   <div class="footer">
     <h4><a href="anoutme.html">About Me</a> | Contact | Copyright 2015</h4>
   </div>
