--- a/Cars.html
+++ b/Cars.html
@@ -13,7 +13,7 @@
   	<h1>Cars</h1>
   </div>
   <div class="nav">
-    <h3><a href="index.html">Home</a> |<a href="Calculator.html"> Calculator</a> | <a href="Cars.html">Cars</a> | <a href="Screensaver.html">Zoog</a> | <a href="Etch.html">Etch-A-Sketch</a> |</h3>
+    <h3><a href="index.html">Home</a> |<a href="Calculator.html"> Calculator</a> | <a href="Cars.html">Cars</a> | <a href="Screensaver.html">Zoog</a> | <a href="Etch.html">Etch-A-Sketch</a> | <a href="snake/Snake.html">Snake</a> |</h3>
   </div>
 <div class="content">
   <p>~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~</p>
