--- a/aboutme.html
+++ b/aboutme.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html class="homePage">
 <head>
-	<!-- This is a comment! Text here will be ignored by the browser. -->
 	<meta charset="UTF-8">
 	<title>Megan's Portfolio</title>
 	<link href="myCSS.css" rel="stylesheet" type="text/css">
@@ -12,15 +11,16 @@
   	<h1>About Me</h1>
   </div>
   <div class="nav">
-    <h3><a href="index.html">Home</a> |<a href="Calculator.html"> Calculator</a> | <a href="Cars.html">Cars</a> | <a href="Screensaver.html">Zoog</a> | <a href="Etch.html">Etch-A-Sketch</a> |</h3>
+    <h3><a href="index.html">Home</a> |<a href="Calculator.html"> Calculator</a> | <a href="Cars.html">Cars</a> | <a href="Screensaver.html">Zoog</a> | <a href="Etch.html">Etch-A-Sketch</a> | <a href="snake/Snake.html">Snake</a> |</h3>
   </div>
   <div class="content">
     <p>Bonjour toute le monde!</p>
     <p>Je m'appel Megan</p>
+    <p> I program in Java and Processing</p>
     <p>&nbsp; </p>
   </div>
   <div class="footer">
-    <h4><a href="anoutme.html">About Me</a> | Contact | Copyright 2015</h4>
+    <h4><a href="aboutme.html">About Me</a> | Contact | Copyright 2015</h4>
   </div>
 </div>
 </body>
