--- a/Etch.html
+++ b/Etch.html
@@ -13,10 +13,10 @@
   	<h1>Etch-A-Sketch</h1>
   </div>
   <div class="nav">
-    <h3><a href="index.html">Home</a> |<a href="Calculator.html"> Calculator</a> | <a href="Cars.html">Cars</a> | <a href="Screensaver.html">Zoog</a> | <a href="Etch.html">Etch-A-Sketch</a> |</h3>
+    <h3><a href="index.html">Home</a> |<a href="Calculator.html"> Calculator</a> | <a href="Cars.html">Cars</a> | <a href="Screensaver.html">Zoog</a> | <a href="Etch.html">Etch-A-Sketch</a> | <a href="snake/Snake.html">Snake</a> |</h3>
   </div>
   <div class="content">
-  <p> ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~</p>
+  <p> ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~</p>
   <p>
     <canvas id="etch" width="400" height="400"></canvas> 
   </p>
