Added Snake to HS

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <p><a href="Cars.html">Cars Project</a></p>
     <p><a href="Screensaver.html">Zoog Project</a></p>
     <p><a href="Etch.html">Etch-A-Sketch</a></p>
+    <p><a href="snake/Snake.html">Snake</a></p>
     <p>&nbsp;</p>
   </div>
   <div class="footer">
